third-project-updated

--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,7 @@
 @import url(../blocks/button.css);
 @import url(../blocks/cover.css);
 @import url(../blocks/footer.css);
+@import url(../blocks/lead.css);
 * {
   margin: 0;
 }
