--- a/blocks/button.css
+++ b/blocks/button.css
@@ -10,6 +10,9 @@
   text-align: center;
   display: block;
   box-sizing: border-box;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 20px;
 }
 .button:hover {
   background: #0063d2;
