--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -8,7 +8,7 @@
   margin: 92px auto 0 auto;
   padding: 0;
   width: 92%;
-  height: 740px;
+  min-height: 740px;
   position: relative;
   z-index: 0;
   background-position: center;
@@ -21,7 +21,7 @@
   height: 100%;
 
   background: #2a2c2f;
-  opacity: 0.2;
+  opacity: 0.3;
   transition: 0.3s;
   z-index: -1;
 }
@@ -32,10 +32,11 @@
   font-size: 18px;
   line-height: 1.22;
   text-align: center;
-  margin: 32px auto 0 auto;
+  margin: 0;
   padding: 0;
   list-style: none;
   color: #ffffff;
+  max-width: 280px;
 }
 .cover__title {
   font-weight: 900;
@@ -43,8 +44,8 @@
   line-height: 1.06;
   text-align: center;
   color: #fffdfd;
-  margin: 243px 0 0 0;
   padding: 0;
+  margin-bottom: 32px;
 }
 
 .cover:hover::before {
@@ -53,15 +54,41 @@
 
 @media screen and (max-width: 820px) {
   .cover {
-    max-height: min-content;
+    min-height: 524px;
     max-width: 768px;
     width: 100%;
     margin-top: 88px;
   }
 }
-
+.cover__title {
+  margin-top: 246px;
+}
+.cover__button {
+  margin-bottom: 246px;
+}
 @media screen and (max-width: 425px) {
   .cover {
-    max-width: 100vw;
+    width: 100%;
+    min-height: 254px;
+    margin-top: 64px;
+  }
+
+  .cover__title {
+    margin-top: 46px;
+    margin-bottom: 16px;
+    font-size: 32px;
+    line-height: 35px;
+    color: #fff;
+  }
+
+  .cover__subtitle {
+    max-width: 280px;
+    font-size: 14px;
+    line-height: 16px;
+  }
+
+  .cover__button {
+    margin-top: 16px;
+    margin-bottom: 45px;
   }
 }
