--- a/blocks/photo-grid.css
+++ b/blocks/photo-grid.css
@@ -1,39 +1,41 @@
 .photo-grid {
   display: grid;
-  grid-template-rows: repeat(2, 50%);
   grid-template-columns: repeat(4, 1fr);
-  max-width: 1184px;
+  grid-template-rows: repeat(2, 1fr);
   gap: 16px 16px;
-  padding-bottom: 92px;
-  margin: 0 auto;
+  justify-content: center;
+  margin: 118px auto 0 auto;
+  padding: 0;
+  max-width: 1184px;
 }
 .photo-grid__item {
+  max-width: 100%;
+  object-fit: contain;
   margin: 0;
   padding: 0;
-  width: 100%;
+}
+
+@media screen and (max-width: 820px) {
+  .photo-grid__item {
+    width: 100%;
+    height: 100%;
+  }
 }
 @media screen and (max-width: 820px) {
   .photo-grid {
     grid-template-columns: 50% 50%;
-    grid-template-rows: repeat(4, 264px);
-    grid-gap: 16px 16px;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 88px;
     max-width: 720px;
-    padding-bottom: 88px;
-    margin: 88px 24px 0 24px;
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 620px) {
   .photo-grid {
     grid-template-columns: 100%;
     grid-template-rows: repeat(8, 1fr);
-    grid-gap: 12px 0px;
-    margin: 90px 16px 0 16px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .photo-grid__item {
-    max-height: 216px;
+    gap: 12px 0px;
+    margin-top: 90px;
+    max-width: 288px;
   }
 }
