--- a/blocks/place.css
+++ b/blocks/place.css
@@ -11,14 +11,16 @@
   color: #ffffff;
   padding-bottom: 80px;
 }
-
+.place:last-of-type {
+  padding-bottom: 0;
+}
 .place__title {
   font-family: "Inter";
   font-style: normal;
   font-size: 72px;
   max-width: 460px;
   color: #ffffff;
-  line-height: 90px;
+  line-height: 76px;
   grid-area: title;
 }
 
@@ -27,10 +29,6 @@
   max-height: 460px;
   grid-area: image;
 }
-.place__image:hover {
-  opacity: 0.2;
-}
-
 .place__description {
   max-width: 485px;
   grid-area: paragraph;
@@ -54,7 +52,7 @@
 }
 .place__artist {
   max-width: 456px;
-  padding-top: 107px;
+  align-self: end;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -69,6 +67,7 @@
   font-size: 12px;
   line-height: 15px;
   grid-area: artist;
+  letter-spacing: 0.12em;
 }
 
 .place__artist-name {
@@ -97,27 +96,19 @@
 }
 @media screen and (max-width: 425px) {
   .place__artist-name {
-    margin: 12px 16px 0 16px;
     line-height: 22px;
     width: 100%;
   }
 }
-@media screen and (max-width: 1000px) {
-  .place {
-    grid-template-columns: 340px 1fr;
-    grid-template-rows: min-content auto 1fr;
-    grid-gap: 36px 25px;
-    padding-bottom: 65px;
-  }
-}
 
-@media screen and (max-width: 725px) {
+@media screen and (max-width: 525px) {
   .place {
     grid-template-areas: "title" "article" "image" "paragraph" "paragraph" "button";
-    grid-gap: 7px;
+    gap: 7px;
     grid-template-columns: 320px;
     grid-template-rows: repeat(6, min-content);
     padding-bottom: 46px;
+    margin: 0 auto;
   }
 }
 @media screen and (max-width: 820px) {
@@ -125,21 +116,19 @@
     font-size: 42px;
     line-height: 45px;
     padding-top: 15px;
+    max-height: 92px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .place__title {
     font-size: 32px;
-    max-height: 100vh;
     max-width: 288px;
     margin: 0 16px;
   }
 }
 @media screen and (max-width: 1100px) {
   .place__image {
-    width: 100%;
-    height: 100%;
     margin-top: 10px;
   }
 }
@@ -148,8 +137,6 @@
   .place__image {
     max-width: 340px;
     max-height: 340px;
-    width: 100%;
-    height: 100%;
   }
 }
 
@@ -163,26 +150,21 @@
     height: 100%;
   }
 }
+
 @media screen and (max-width: 820px) and (min-width: 426px) {
-  .place__text {
+  .place__paragraph {
     max-width: 350px;
     font-size: 16px;
   }
 }
 
 @media screen and (max-width: 425px) {
-  .place__text {
-    font-size: 16px;
+  .place__paragraph {
     max-width: 290px;
-    max-height: 100%;
     margin: 25px 16px 0 16px;
   }
 }
-@media screen and (max-width: 820px) and (min-width: 426px) {
-  .place__paragraph {
-    margin-top: 20px;
-  }
-}
+
 @media screen and (max-width: 820px) {
   .place__artist {
     max-width: 352px;
@@ -193,13 +175,7 @@
 @media screen and (max-width: 425px) {
   .place__artist {
     max-width: 288px;
-    max-height: min-content;
-    margin-top: 23px;
-  }
-}
-@media screen and (max-width: 425px) {
-  .place__artist-label {
-    line-height: 12px;
-    margin: 0 16px;
+    margin-top: 30px;
+    margin-left: 16px;
   }
 }
