--- a/blocks/places.css
+++ b/blocks/places.css
@@ -1,9 +1,22 @@
 .places {
-  max-width: 987px;
-  margin: 0 auto;
+  padding: 92px 100px 0;
+  display: flex;
+  flex-direction: column;
 }
-@media screen and (max-width: 820px) {
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .places {
-    max-width: 720px;
+    padding: 88px 24px 0;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .places {
+    padding: 64px 0 0;
+  }
+}
+@media screen and (max-width: 525px) {
+  .places {
+    margin: 0 auto;
   }
 }
