--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -26,8 +26,26 @@
   z-index: -1;
 }
 .cover__button {
+  background: #0278fe;
+  border-radius: 4px;
+  color: #ffffff;
+  padding: 13px 20px;
+  text-decoration: none;
+  max-width: 248px;
+  max-height: 48px;
+  width: max-content;
+  text-align: center;
+  display: block;
+  box-sizing: border-box;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 20px;
   margin: 32px auto 246px auto;
 }
+.cover__button:hover {
+  background: #0063d2;
+}
+
 .cover__subtitle {
   font-size: 18px;
   line-height: 1.22;
@@ -64,7 +82,6 @@
 
 @media screen and (max-width: 425px) {
   .cover {
-    width: 100%;
     min-height: 254px;
     margin-top: 64px;
   }
@@ -74,7 +91,6 @@
     margin-bottom: 16px;
     font-size: 32px;
     line-height: 35px;
-    color: #fff;
   }
 
   .cover__subtitle {
