--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -59,7 +59,6 @@
 
 @media screen and (max-width: 820px) {
   .intro__text-subtitle {
-    line-height: 24px;
     max-width: 720px;
   }
 }
@@ -78,21 +77,13 @@
 
 @media screen and (max-width: 425px) {
   .intro {
-    margin: 64px auto 0 5vw;
-    max-width: 288px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .intro {
-    margin: 64px auto 0 16px;
+    margin: 64px auto 0 auto;
     max-width: 288px;
   }
 }
 @media screen and (max-width: 820px) {
   .intro__title {
     max-width: 720px;
-    line-height: 47px;
   }
 }
 
