--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -51,6 +51,12 @@
 }
 
 @media screen and (max-width: 425px) {
+  .lead {
+    margin: 0 auto;
+  }
+  .lead__title {
+    margin-top: 50px;
+  }
   .lead__subtitle {
     margin-top: 16px;
     font-size: 16px;
