--- a/blocks/place.css
+++ b/blocks/place.css
@@ -10,6 +10,7 @@
   gap: 48px 40px;
   color: #ffffff;
   padding-bottom: 80px;
+  margin: 0 auto;
 }
 .place:last-of-type {
   padding-bottom: 0;
@@ -77,23 +78,35 @@
   line-height: 20px;
 }
 .place__button {
+  background: #0278fe;
+  border-radius: 4px;
+  color: #ffffff;
+  padding: 13px 20px;
+  text-decoration: none;
   max-width: 248px;
   max-height: 48px;
+  width: max-content;
+  text-align: center;
+  display: block;
+  box-sizing: border-box;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 20px;
   grid-area: button;
 }
+.place__button:hover {
+  background: #0063d2;
+}
+
 @media screen and (max-width: 820px) {
+  .place {
+    padding-bottom: 72px;
+  }
   .place__button {
     margin-top: 10px;
   }
 }
 
-@media screen and (max-width: 425px) {
-  .place__button {
-    margin: 23px 16px 0 16px;
-    padding: 13px 40px;
-    max-width: 288px;
-  }
-}
 @media screen and (max-width: 425px) {
   .place__artist-name {
     line-height: 22px;
@@ -101,7 +114,7 @@
   }
 }
 
-@media screen and (max-width: 525px) {
+@media screen and (max-width: 625px) {
   .place {
     grid-template-areas: "title" "article" "image" "paragraph" "paragraph" "button";
     gap: 7px;
@@ -115,8 +128,6 @@
   .place__title {
     font-size: 42px;
     line-height: 45px;
-    padding-top: 15px;
-    max-height: 92px;
   }
 }
 
@@ -155,6 +166,7 @@
   .place__paragraph {
     max-width: 350px;
     font-size: 16px;
+    line-height: 26px;
   }
 }
 
@@ -177,5 +189,13 @@
     max-width: 288px;
     margin-top: 30px;
     margin-left: 16px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .place__button {
+    margin: 23px auto 0 auto;
+    padding: 13px 40px;
+    max-width: 288px;
+    width: 100%;
   }
 }
