--- a/blocks/places.css
+++ b/blocks/places.css
@@ -2,6 +2,7 @@
   padding: 92px 100px 0;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
