--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-content: center;
   justify-content: center;
-  margin: 92px auto 0 148px;
+  margin: 92px auto 0 auto;
   padding: 0;
   text-align: left;
 }
