--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -69,7 +69,7 @@
     max-width: 768px;
     width: 100%;
     max-height: 500px;
-    margin: 33px 0 0 0;
+    margin: 33px auto 0 auto;
   }
 }
 
@@ -78,6 +78,6 @@
     max-width: 320px;
     width: 100vw;
     max-height: 200px;
-    margin-top: 40px;
+    margin: 40px auto 0 auto;
   }
 }
