--- a/blocks/place.css
+++ b/blocks/place.css
@@ -101,9 +101,7 @@
 @media screen and (max-width: 820px) {
   .place {
     padding-bottom: 72px;
-  }
-  .place__button {
-    margin-top: 10px;
+    gap: 48px 28px;
   }
 }
 
@@ -138,11 +136,6 @@
     margin: 0 16px;
   }
 }
-@media screen and (max-width: 1100px) {
-  .place__image {
-    margin-top: 10px;
-  }
-}
 
 @media screen and (max-width: 820px) {
   .place__image {
@@ -174,6 +167,8 @@
   .place__paragraph {
     max-width: 290px;
     margin: 25px 16px 0 16px;
+    font-size: 16px;
+    line-height: 26px;
   }
 }
 
